--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+.small-flag {
+    width: 50px;
+}
+
+.margin-right {
+    margin-right: 5px;
+}
