--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -16,7 +16,7 @@
     <div class="row">
         <div class="col-4">
             <h3>Bandera</h3>
-            <img [src]="pais.flag" alt="" class="img-thumbnail">
+            <img [src]="pais.flags.png" alt="" class="img-thumbnail">
         </div>
 
         <div class="col">
@@ -45,5 +45,4 @@
         </div>
     </div>
 </ng-template>
-
 
