--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -3,9 +3,31 @@
 
 <div class="row">
     <div class="col">
-        <app-pais-input placeholder="Por pais..." (onDebounce)="sugerencias($event)" (onEnter)="buscar($event)"></app-pais-input>
+        <app-pais-input 
+            placeholder="Por pais..." 
+            (onDebounce)="sugerencias($event)" 
+            (onEnter)="buscar($event)">
+        </app-pais-input>
     </div>
 </div>
+
+<ul class="list-group" *ngIf="mostrarSugerencias">
+    <li 
+        class="list-group-item list-group-item-action"
+        *ngFor="let pais of paisesSugeridos"
+    >
+        <a class="nav-link" [routerLink]="['/pais', pais.alpha2Code]">
+            {{ pais.name }}
+        </a>
+    </li>
+    <li class="list-group-item list-group-item-action"
+        (click)="buscarSugerido(termino)"
+    >
+        <a class="nav-link">
+            Buscar "{{ termino }}"
+        </a>
+    </li>
+</ul>
 
 <hr>
 
