--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,26 @@
-<p>por-region works!</p>
+<h3>Buscar por region: <small>{{regionActiva | titlecase}}</small></h3>
+
+<h5>Seleccione la region</h5>
+
+<div class="row">
+    <div class="col">
+        <button 
+                (click)="activarRegion(region)" 
+                [class]="getClassCss(region )" 
+                *ngFor="let region of regiones"
+        >
+            {{region | titlecase}}
+        </button>
+    </div>
+</div>
+
+<app-pais-table [paises]="paises"></app-pais-table>
+
+<!-- [class.btn-primary]="region === regionActiva" -->
+
+<!-- 
+    [ngClass]="{
+                    'btn-primary': region === regionActiva, 
+                    'btn-outline-primary': region !== regionActiva
+                }"
+ -->
