add header component and update navbar styling; change API URL to v3.1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
+<div>
+  <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="https://angular.io/assets/images/logos/angular/angular.svg" alt="Angular Logo" width="30" height="24" class="d-inline-block align-text-top">
+        Countries App
+      </a>
+    </div>
+  </nav>
+</div>
+
 <div class="row container mt-4">
   <div class="col-3">
     <app-sidebar></app-sidebar>
@@ -5,7 +16,6 @@
   </div>
 
   <div class="col">
-    <router-outlet></router-outlet>   
-
+    <router-outlet></router-outlet>
   </div>
 </div>
