refactor header implementation; replace navbar in app component with standalone header component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,5 @@
 <div>
-  <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="https://angular.io/assets/images/logos/angular/angular.svg" alt="Angular Logo" width="30" height="24" class="d-inline-block align-text-top">
-        Countries App
-      </a>
-    </div>
-  </nav>
+  <app-header></app-header>
 </div>
 
 <div class="row container mt-4">
