--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="https://angular.io/assets/images/logos/angular/angular.svg" alt="Angular Logo" width="30"
+                height="24" class="d-inline-block align-text-top">
+            Countries App
+        </a>
+    </div>
+</nav>
