unit tests on various files

--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -4,7 +4,8 @@
             autocomplete="off"
             class="form-control"
             [(ngModel)]="termino"
-            [placeholder]="placeholder"
-            (input)="teclaPresionada()"
+            [placeholder]="placeholder()"
+            (keyup)="searchTerm()"
+            #searchInput
     >
 </form>
