--- a/src/app/pais/components/pais-table/pais-table.component.html
+++ b/src/app/pais/components/pais-table/pais-table.component.html
@@ -18,7 +18,7 @@
                     <td><img class="small-flag" [src]="pais.flags.png" alt="" srcset=""></td>
                     <td>{{pais.capital}}, {{pais.name}}</td>
                     <td>{{pais.population | number}}</td>
-                    <td [routerLink]="['/pais', pais.alpha2Code]">Ver</td>
+                    <!-- <td [routerLink]="['/pais', pais.alpha2Code]">Ver</td> -->
                 </tr>
             </tbody>
         </table>
