--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -26,10 +26,10 @@
                     <strong>Poblacion</strong> {{pais.population | number}}
                 </li>
                 <li class="list-group-item">
-                    <strong>Codigo numerico</strong> {{pais.numericCode | number}}
+                    <!-- <strong>Codigo numerico</strong> {{pais.numericCode | number}} -->
                 </li>
                 <li class="list-group-item">
-                    <strong>Codigo alpha3</strong> {{pais.alpha3Code}}
+                    <!-- <strong>Codigo alpha3</strong> {{pais.alpha3Code}} -->
                 </li>
             </ul>
         </div>
@@ -38,10 +38,10 @@
     <h3>Traducciones</h3>
     <div class="row">
         <div class="col">
-            <span class="badge bg-primary margin-right">{{pais.translations?.de}}</span>
+            <!-- <span class="badge bg-primary margin-right">{{pais.translations?.de}}</span>
             <span class="badge bg-primary margin-right">{{pais.translations?.es}}</span>
             <span class="badge bg-primary margin-right">{{pais.translations?.fr}}</span>
-            <span class="badge bg-primary margin-right">{{pais.translations?.ja}}</span>
+            <span class="badge bg-primary margin-right">{{pais.translations?.ja}}</span> -->
         </div>
     </div>
 </ng-template>
