enhance PaisInputComponent with clear input functionality; update pais-table to use common name; add Font Awesome for icons

--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -1,11 +1,16 @@
 <form (ngSubmit)="buscar()">
-    <input type="text"
-            name="termino"
-            autocomplete="off"
-            class="form-control"
-            [(ngModel)]="termino"
-            [placeholder]="placeholder()"
-            (keyup)="searchTerm()"
-            #searchInput
-    >
+    <div class="input-group">
+        <input type="text"
+                name="termino"
+                autocomplete="off"
+                class="form-control"
+                [(ngModel)]="termino"
+                [placeholder]="placeholder()"
+                (keyup)="searchTerm()"
+                #searchInput
+        >
+        <span class="input-group-text" (click)="clearInput()">
+            <i class="fas fa-times"></i>
+        </span>
+    </div>
 </form>
