--- a/src/app/pais/components/pais-table/pais-table.component.html
+++ b/src/app/pais/components/pais-table/pais-table.component.html
@@ -16,7 +16,7 @@
                 <tr *ngFor="let pais of paises; let i=index">
                     <td>{{i+1}}</td>
                     <td><img class="small-flag" [src]="pais.flags.png" alt="" srcset=""></td>
-                    <td>{{pais.capital}}, {{pais.name}}</td>
+                    <td>{{pais.capital}}, {{pais.name.common}}</td>
                     <td>{{pais.population | number}}</td>
                     <!-- <td [routerLink]="['/pais', pais.alpha2Code]">Ver</td> -->
                 </tr>
