--- a/src/app/pais/components/pais-table/pais-table.component.html
+++ b/src/app/pais/components/pais-table/pais-table.component.html
@@ -1,26 +1,35 @@
-<div class="row" *ngIf="paises.length > 0">
-    <div class="col">
+@if (paises().length > 0) {
+    <div class="row">
+        <div class="col">
 
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Bandera</th>
-                    <th>Nombre</th>
-                    <th>Poblacion</th>
-                    <th></th>
-                </tr>
-            </thead>
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Flag</th>
+                        <th>Name</th>
+                        <th>Population</th>
+                        <th></th>
+                    </tr>
+                </thead>
 
-            <tbody>
-                <tr *ngFor="let pais of paises; let i=index">
-                    <td>{{i+1}}</td>
-                    <td><img class="small-flag" [src]="pais.flags.png" alt="" srcset=""></td>
-                    <td>{{pais.capital}}, {{pais.name.common}}</td>
-                    <td>{{pais.population | number}}</td>
-                    <!-- <td [routerLink]="['/pais', pais.alpha2Code]">Ver</td> -->
-                </tr>
-            </tbody>
-        </table>
-    </div>
+                <tbody>
+                    @for (pais of paises(); track pais.idd; let i = $index) {
+
+                    <tr>
+                        <td> {{i+1}} </td>
+                        <td> <img class="small-flag" [src]="pais.flags.png" alt="" srcset=""> </td>
+                        <td> {{pais.capital}}, {{pais.name.common}} </td>
+                        <td> {{pais.population | number}} </td>
+                        <td> <button class="btn btn-outline-primary" [routerLink]="['/pais', pais.cioc]">Go</button> </td>
+                    </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
 </div>
+
+
+
+
+}
