--- a/src/app/pais/components/pais-table/pais-table.component.html
+++ b/src/app/pais/components/pais-table/pais-table.component.html
@@ -15,14 +15,13 @@
 
                 <tbody>
                     @for (pais of paises(); track pais.idd; let i = $index) {
-
-                    <tr>
-                        <td> {{i+1}} </td>
-                        <td> <img class="small-flag" [src]="pais.flags.png" alt="" srcset=""> </td>
-                        <td> {{pais.capital}}, {{pais.name.common}} </td>
-                        <td> {{pais.population | number}} </td>
-                        <td> <button class="btn btn-outline-primary" [routerLink]="['/pais', pais.cioc]">Go</button> </td>
-                    </tr>
+                        <tr>
+                            <td> {{i+1}} </td>
+                            <td> <img class="small-flag" [src]="pais.flags.png" alt="" srcset=""> </td>
+                            <td> {{pais.capital}}, {{pais.name.common}} </td>
+                            <td> {{pais.population | number}} </td>
+                            <td> <button class="btn btn-outline-primary" [routerLink]="['/pais', pais.cca3]">Go</button> </td>
+                        </tr>
                     }
                 </tbody>
             </table>
