--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,16 +1,16 @@
-<h2>Por Capital</h2>
+<h2>By Capital</h2>
 <hr>
 
 <div class="row">
     <div class="col">
-        <app-pais-input placeholder="Buscar capital..." (onEnter)="buscar($event)"></app-pais-input>
+        <app-pais-input placeholder="Type the capital and hit ENTER..." (onEnter)="buscar($event)"></app-pais-input>
     </div>
 </div>
 
 <hr>
 
 <div class="alert alert-danger" *ngIf="hayError">
-    No se encontro nada con el termino {{ termino }}
+    No results were found for term {{ termino }}
 </div>
 
 <app-pais-table [paises]="paises"></app-pais-table>
