--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -17,7 +17,7 @@
     </li>
     <li class="list-group-item list-group-item-action" (click)="buscarSugerido(termino)">
         <a class="nav-link">
-            Buscar "{{ termino }}"
+            Look for "{{ termino }}"
         </a>
     </li>
 </ul>
@@ -25,7 +25,7 @@
 <hr>
 
 <div class="alert alert-danger" *ngIf="hayError">
-    No se encontro nada con el termino {{ termino }}
+    No results found for term: {{ termino }}
 </div>
 
 <app-pais-table [paises]="paises"></app-pais-table>
