feat: implement loading component; integrate loading state in app and update region component for better UX

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
+<!-- @if (paisService.isLoading()) {
+  <app-loading></app-loading>
+} -->
+
 <div>
   <app-header></app-header>
 </div>
 
 <div class="row container mt-4">
+
   <div class="col-3">
     <app-sidebar></app-sidebar>
 
