--- a/src/app/pais/components/pais-table/pais-table.component.html
+++ b/src/app/pais/components/pais-table/pais-table.component.html
@@ -1,8 +1,8 @@
 @if (paises().length > 0) {
-    <div class="row">
+    <div class="row mt-5 table-size">
         <div class="col">
 
-            <table class="table table-hover">
+            <table class="table table-hover table-responsive table-bordered">
                 <thead>
                     <tr>
                         <th>#</th>
@@ -14,7 +14,7 @@
                 </thead>
 
                 <tbody>
-                    @for (pais of paises(); track pais.idd; let i = $index) {
+                    @for (pais of paises(); track pais.capital; let i = $index) {
                         <tr>
                             <td> {{i+1}} </td>
                             <td> <img class="small-flag" [src]="pais.flags.png" alt="" srcset=""> </td>
