feat: implement loading component; replace loading indicator in VerPaisComponent for improved user experience

--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -1,8 +1,8 @@
 @let country = rxCountries;
 
-@if (country.isLoading()) {
-    <div class="alert alert-info">
-        Espere por favor...
+@if (rxCountries.isLoading()) {
+    <div style="display: flex; justify-content: center;">
+        <app-loading></app-loading>
     </div>
 } @else {
     @let pais = country.value();
