e2e testing with cypress added to por-pais screen

--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -8,6 +8,7 @@
                 [placeholder]="placeholder()"
                 (keyup)="searchTerm()"
                 #searchInput
+                data-test="country-search-input"
         >
         <span class="input-group-text" (click)="clearInput()">
             <i class="fas fa-times"></i>
