--- a/src/app/pais/components/pais-table/pais-table.component.html
+++ b/src/app/pais/components/pais-table/pais-table.component.html
@@ -1,5 +1,5 @@
 @if (paises().length > 0) {
-    <div class="row mt-5 table-size">
+    <div class="row mt-5 table-size" data-test="country-table">
         <div class="col">
 
             <table class="table table-hover table-responsive table-bordered">
@@ -20,7 +20,7 @@
                             <td> <img class="small-flag" [src]="pais.flags.png" alt="" srcset=""> </td>
                             <td> {{pais.capital}}, {{pais.name.common}} </td>
                             <td> {{pais.population | number}} </td>
-                            <td> <button class="btn btn-outline-primary" [routerLink]="['/pais', pais.cca3]">Go</button> </td>
+                            <td> <button data-test="go-button" class="btn btn-outline-primary" [routerLink]="['/pais', pais.cca3]">Go</button> </td>
                         </tr>
                     }
                 </tbody>
